# WalKit

./: .gitignore  .gitmodules  README.md  notas_mapeado.txt  walker.rosinstall
stability_grid_map/: CMakeLists.txt  package.xml
stability_grid_map/config/: stability_grid_map.rviz  stability_grid_map.yaml
stability_grid_map/include/: stability_grid_map.hpp
stability_grid_map/launch/: simple_demo_launch.py  stability_gridmap.launch.py  visualize_stability_gridmap.launch.py
stability_grid_map/src/: simple_demo_node.cpp  stability_grid_map.cpp
walker2_driver/: CMakeLists.txt  package.xml
walker2_driver/launch/: test_usb.launch.py
walker2_driver/src/: USBConn.cpp
walker2_msgs/: CMakeLists.txt  package.xml
walker2_msgs/msg/: W2Hand.msg
walker_arduino/: CMakeLists.txt  README.md  package.xml
walker_arduino/launch/: left_handle.launch.py  left_wheel.launch.py  right_handle.launch.py  right_wheel.launch.py  test_left_handle.launch.py  test_left_wheel.launch.py  test_right_handle.launch.py  test_right_wheel.launch.py  test_usb.launch.py
walker_arduino/rqt_gui/: all.perspective  right_wheel.perspective
walker_arduino/scripts/: Readme.md  arduino.rules
walker_arduino/src/: USBConn.cpp  USBConn_node.cpp
walker_bringup/: CMakeLists.txt  package.xml
walker_bringup/config/: amcl_params.yaml  demo_view.rviz  laser_box_filter.yaml  laser_feet_filter.yaml  laser_filter.yaml  laser_mask_filter.yaml  laser_scan_matcher.yaml  left_cam.yaml  map_server.yaml  mapper_params_online_async.yaml  nav_laser_filter.yaml  odom_ekf.yaml  right_cam.yaml  stereo_odom.yaml  usb_cam.yaml  vicon_view.rviz  walker.yaml  walker_cfg.bash  walker_controllers.yaml  walker_d435.yaml  walker_ekf.yaml  walker_leap.yaml  walker_lsm.yaml  walker_lsm_rtab.yaml  walker_odom_test.yaml  walker_rtab.yaml  walker_slam.yaml  wt901.yaml  wt901_rtab.yaml
walker_bringup/launch/: bag_recorder.launch.py  laser_filter.launch.py  laser_scan_matcher.launch.py  left_cam.launch.py  nav_laser_filter.launch.py  online_async_launch.py  right_cam.launch.py  robot.launch.py  robot_localisation_ekf.launch.py  rplidar_launch.py  rtabmap_infra.launch.py  rtabmap_stereo.launch.py  rviz2.launch.py  usb_cam.launch.py  walker_amcl.launch.py  walker_efk.launch.py  walker_lsm.launch.py  walker_lsm.launch_old.py  walker_map_server.launch.py  walker_rect_image.launch.py  walker_rtabmap.launch.py  walker_rtabmap.launch.py.save  walker_rtabmap_deps.launch.py  walker_rviz2.launch.py  walker_slam.launch.py  walker_state_publisher.launch.py  walker_stereo_odom.launch.py  walker_viso2_stereo.launch.py  walker_witmotion.launch.py
walker_bringup/maps/: lab_1_3_10.pgm  lab_1_3_10.yaml  map_slam1.pgm  map_slam1.yaml  map_slam2.pgm  map_slam2.yaml  map_slam_exterior.pgm  map_slam_exterior.yaml  map_slam_interior.pgm  map_slam_interior.yaml  walker_global.pgm  walker_global.yaml
walker_bringup/script/: command_core.sh  command_record.sh  command_stop.sh  walker_config.bash
walker_bringup/scripts/: demofile3.txt  find_minimums.py  laser_filter_generator.py  laser_filter_generator_mk2.py  record_service.py
walker_bringup/tmule/: robot_localization_debug.txt  walker.yaml  walker_cfg.bash  walker_leap.yaml  walker_rtab.yaml  walker_sensors.yaml
walker_description/: CMakeLists.txt  package.xml
walker_description/config/: params.yaml
walker_description/scripts/: handle_tf_publisher.py
walker_description/urdf/: walker_model.gazebo  walker_model.xacro
walker_diff_odom/: CMakeLists.txt  package.xml
walker_diff_odom/launch/: walker_diff_odom.launch.py
walker_diff_odom/src/: circular_buffer.cpp  eigen_test.cpp  my_program  walker_odom.cpp  walker_odom_node.cpp
walker_laser_filter/: CMakeLists.txt  package.xml  walker_laser_filter.xml
walker_laser_filter/config/: box_filter.yaml  inverted_box_filter.yaml  mask_filter.yaml
walker_laser_filter/launch/: box_filter.launch.py  inverted_box_filter.launch.py  mask_filter.launch.py
walker_laser_filter/src/: box_filter.cpp  mask_filter.cpp  walker_laser_scan_filter.cpp
walker_loads/: CMakeLists.txt  CMakelists.txt  package.xml  setup.cfg  setup.py
walker_loads/config/: handle_calib.yaml
walker_loads/launch/: gait_monitor_speed.launch.py  partial_loads.launch.py
walker_loads/scripts/: gait_monitor_handles.py  gait_monitor_speed.py  partial_loads.py  plot_loads.py
walker_loads/src/: diff_tracker.cpp  partial_loads.cpp  partial_loads_node.cpp  plot_loads.cpp  spline.cpp
walker_loads/walker_loads/: gait_monitor_handles.py  gait_monitor_speed.py  partial_loads.py  plot_loads.py
walker_msgs/: CMakeLists.txt  package.xml
walker_msgs/msg/: EncoderStamped.msg  GaitStamped.msg  StabilityStamped.msg  Step.msg  StepArray.msg  StepStamped.msg  WalkStats.msg
walker_simulation/: CMakeLists.txt  package.xml
walker_simulation/launch/: hospital_simulation.launch.py
walker_simulation/worlds/: test_hospital.model  test_world.model
walker_slam/: CMakeLists.txt  package.xml
walker_slam/config/: mapper_params_online_async.yaml
walker_slam/launch/: online_async_launch.py
walker_stability/: CMakeLists.txt  package.xml
walker_stability/config/: Correlationes.xlsx  users_conf.yaml
walker_stability/launch/: dummy_users.launch.py  walker_stability.launch.py
walker_stability/scripts/: dummy_user.py  dumy_user.py  walker_stability.py
walker_step_detector/: CMakeLists.txt  package.xml  readme.md
walker_step_detector/config/: demo_stationary_simple_environment.rviz  laser_box_filter.yaml  laser_segmentation.yml  test_step_detector.rviz
walker_step_detector/launch/: demo_stationary_simple_environment.launch.py  plot_steps.launch.py  step_detector.launch.py  step_detector_km.launch.py  step_detector_s.launch.py  test_step_detector.launch.py
walker_step_detector/src/: cluster_features.cpp  compare_steps.cpp  detect_steps.cpp  detect_steps_s.cpp  km_detect_steps.cpp  laser_processor.cpp  legs_tracker.cpp  plot_steps.cpp  track_leg.cpp
walker_usb_cameras/: CMakeLists.txt  README.md  package.xml  test_times.py
walker_usb_cameras/config/: est_left_info.yaml  jgg_params.yaml  (+6 more)
(+118 files in other folders)
