<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_bringup</name>
  <version>0.0.1</version>
  <description>
    ROS 2 launch scripts for starting the walker 
  </description>

  <maintainer email="manolofc@gmail.com">Manuel Fernandez Carmona</maintainer>  
  <author email="manolofc@gmail.com">Manuel Fernandez Carmona.</author>

  <license>Creative Commons</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>walker_description</exec_depend>
  <exec_depend>walker_arduino</exec_depend>
  <exec_depend>walker_diff_odom</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
