<package format="3">
  <name>walker_laser_filter</name>
  <description>
    Filter to extend laser_filters set
  </description>
  <version>0.0.1</version>
  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>
  <author>Tully Foote</author>
  <license>BSD</license>

  <build_depend>ament_cmake_auto</build_depend>

  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>filters</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>laser_geometry</depend>
  <depend>angles</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
