<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_simulation</name>
  <version>0.0.1</version>
  <description>
    Testing simulated walker 
  </description>

  <author email="manolofc@gmail.com">Manuel Fernandez Carmona</author>
  <maintainer email="manolofc@gmail.com">Manuel Fernandez Carmona</maintainer>
  
  <license>BSD, Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>walker_bringup</exec_depend>
  <exec_depend>aws_robomaker_hospital_world</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
