<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_slam</name>
  <version>0.0.1</version>
  <description>
    ROS 2 launch and config for slam-toolbox
  </description>

  <maintainer email="manolofc@gmail.com">Manuel Fernandez Carmona</maintainer>  
  <author email="manolofc@gmail.com">Manuel Fernandez Carmona.</author>

  <license>Creative Commons</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
