<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_step_detector</name>
  <version>0.0.0</version>
  <description>Walker step detector</description> 
  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
  <author email="manolofc@gmail.com">Manuel Fernandez-Carmona</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>walker_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>  
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>scipy</depend>
  <depend>kalman</depend>
  
  <!-- This dependency should point to 4.2 -->
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
