<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_usb_cameras</name>
  <version>0.0.0</version>
  <description>USB camera calibration files used with Walker platform</description>
  <maintainer email="manolofc@gmail.com">mfcarmona</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>usb_cam</depend>
  <depend>rqt_image_view</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>image_pipeline</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
